Redesigned events grids and extracted to individual includes templates

--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -2,88 +2,17 @@
 {% load static %}
 
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<div class="header-container"></div>
 {% endblock %}
 
 {% block content %}
+<div class="overlay"></div>
 <div class="container mt-5">
-    <h1>Events</h1>
+    <h1>Calendar</h1>
 </div>
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-12">
-            <hr>
-            <h5>Past events</h5>
-            <div class="table-responsive rounded text-left">
-                <table class="table">
-                    <thead class="thead-light">
-                        <tr>
-                            <th style="width: 15%" scope="col">Date</th>
-                            <th style="width: 60%" scope="col">Programme</th>
-                            <th style="width: 15%" scope="col">Venue</th>
-                            <th style="width: 10%" scope="col">Link</th>
-                        </tr>
-                    </thead>
-                    {% for event in calendar %}
-                    {% if event.is_due %}
-                    <tbody>
-                        <tr>
-                            <th scope="row"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small></th>
-                            <td>{{ event.programme }}</td>
-                            <td>{{ event.venue }}</td>
-                            {% if event.event_url %}
-                            <td scope="col">
-                                <a href="{{ event.event_url }}">Link</a>
-                            </td>
-                            {% else %}
-                            <td scope="col">No link</td>
-                            {% endif %}
-                        </tr>
-                    </tbody>
-                    {% endif %}
-                    {% endfor %}
-                </table>
-            </div>
-            <hr>
-            <h5>Future events</h5>
-            <div class="table-responsive rounded text-left">
-                <table class="table">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th style="width: 15%" scope="col">Date</th>
-                            <th style="width: 60%" scope="col">Programme</th>
-                            <th style="width: 15%" scope="col">Venue</th>
-                            <th style="width: 10%" scope="col">Link</th>
-                        </tr>
-                    </thead>
-                    {% for event in calendar %}
-                    {% if event.is_future %}
-                    <tbody>
-                        <tr>
-                            <th scope="row"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small></th>
-                            <td>{{ event.programme }}</td>
-                            <td>{{ event.venue }}</td>
-                            {% if event.event_url %}
-                            <td scope="col">
-                                <a href="{{ event.event_url }}">Link</a>
-                            </td>
-                            {% else %}
-                            <td scope="col">No link</td>
-                            {% endif %}
-                        </tr>
-                    </tbody>
-                    {% endif %}
-                    {% endfor %}
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
+{% include 'includes/event_grid_lg.html' %}
+{% include 'includes/event_grid_sm.html' %}
 {% endblock content %}
 
 {% block page_footer %}
