Deleted horizontal rulers

--- a/shop/templates/shop/cd_details.html
+++ b/shop/templates/shop/cd_details.html
@@ -17,8 +17,7 @@
         <h4 class="logo-font my-1">Free delivery if you buy {{ free_delivery_threshold }} CDs!</h4>
     </div>
 </div>
-<hr class="w-50 mx-auto">
-<h1>{{ cd.name }}</h1>
+<h1 class="mt-5">{{ cd.name }}</h1>
 <div class="container">
     <div class="row">
         <div class="col text-center">
