--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -2,11 +2,7 @@
 {% load static %}
 
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<div class="header-container"></div>
 {% endblock page_header %}
 
 {% block content %}
@@ -21,9 +17,7 @@
     <div class="row">
 
         <div class="col">
-            <hr>
-            <h2 class="mb-4">Shop Here</h2>
-            <hr>
+            <h2 class="my-5">Shop Here</h2>
         </div>
     </div>
     <div class="row">
@@ -32,7 +26,7 @@
                 {% for cd in cds %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="card h-100 border-0">
-                    <div class="card-body pb-3 pt-0">
+                    <div class="card-body pb-3 pt-2">
                         <p class="mb-0  font-weight-bold">{{ cd.name }}</p>
                     </div>
                         {% if cd.image %}
@@ -88,9 +82,5 @@
 {% endblock content %}
 
 {% block page_footer %}
-<div class="container footer-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<div class="footer-container"></div>
 {% endblock page_footer %}
