--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,43 +1,51 @@
 {% load static %}
-<footer class="footer fixed-bottom navbar-expand navbar-dark bg-dark">
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" id="navbarDropdown" role="button">
-                    Link
-                </a>
-            </li>
-        </ul>
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                <li class="list-inline-item">
-                    <a class="text-info font-weight-bold text-nav nav-link" href="">
-                        <div class="text-center">
-                            <div><i class="fab fa-facebook fa-lg"></i></div>
-                        </div>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="text-info font-weight-bold text-nav nav-link" href="">
-                        <div class="text-center">
-                            <div><i class="fab fa-twitter fa-lg"></i></div>
-                        </div>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="text-info font-weight-bold text-nav nav-link" href="">
-                        <div class="text-center">
-                            <div><i class="fab fa-instagram fa-lg"></i></div>
-                        </div>
-                    </a>
-                </li>
-            </ul>
+
+<!-- Site footer -->
+<footer class="site-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 text-left">
+                <h6>About</h6>
+                <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur, laborum delectus ipsam asperiores, culpa doloremque soluta quos repellendus esse vitae, rem cupiditate sequi ipsum quibusdam.</p>
+            </div>
+
+
+
+            <div class="col-6 text-left text-md-right">
+                <h6>Contact</h6>
+                <ul class="footer-links">
+                    <li><i class="fas fa-home mr-3"></i>Waddenweg 149,</li>
+                    <li>2134XL, Hoofddorp, NL</li>
+                    <li><i class="fas fa-phone mr-3"></i>+31 6 5106 3002</li>
+                    <li><i class="fas fa-envelope mr-3"></i><a href="mailto:brachetta@me.com">brachetta@me.com</a></li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12 text-left">
+                <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved.
+                </p>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <ul class="social-icons">
+                    <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+                    <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </footer>
+
+
+
+
+
+
+
