--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -32,6 +32,8 @@
                     <div class="dropdown-menu border-0" aria-labelledby="user-options">
                         {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
+                        <a href="" class="dropdown-item">Media Management</a>
+                        <a href="{% url 'add_event' %}" class="dropdown-item">Events Management</a>
                         <a href="{% url 'add_cd' %}" class="dropdown-item">Product Management</a>
                         {% endif %}
                         <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
