--- a/events/templates/includes/event_grid_sm.html
+++ b/events/templates/includes/event_grid_sm.html
@@ -10,8 +10,15 @@
         <div class="col-3 border bg-secondary text-light text-left pl-1"><small>Venue</small></div>
         <div class="col-9 border text-left">{{ event.venue }}</div>
         <div class="col-3 border bg-secondary text-light text-left pl-1"><small>Link</small></div>
-        <div class="col-9 border text-left">{% if event.event_url %}<a href="{{ event.event_url }}">Link</a>{% else %}<small>No Link</small>{% endif %}</div>
-        <div class="col-12 mb-5"></div>
+        <div class="col-9 border text-left">{% if event.event_url %}<a href="{{ event.event_url }}">Link</a>{% else %}<small>None</small>{% endif %}</div>
+        {% if request.user.is_superuser %}
+        <div class="col-12 mb-5">
+            <small class="font-weight-bold">
+                <a href="{% url 'edit_event' event.id %}">Edit</a> |
+                <a class="text-danger" href="{% url 'delete_event' event.id %}">Delete</a>
+            </small>
+        </div>
+        {% endif %}
         {% endif %}
         {% endfor %}
     </div>
@@ -27,8 +34,15 @@
         <div class="col-3 border bg-info text-light text-left pl-1"><small>Venue</small></div>
         <div class="col-9 border text-left">{{ event.venue }}</div>
         <div class="col-3 border bg-info text-light text-left pl-1"><small>Link</small></div>
-        <div class="col-9 border text-left">{% if event.event_url %}<a href="{{ event.event_url }}">Link</a>{% else %}No Link{% endif %}</div>
-        <div class="col-12 mb-5"></div>
+        <div class="col-9 border text-left">{% if event.event_url %}<a href="{{ event.event_url }}">Link</a>{% else %}None{% endif %}</div>
+        {% if request.user.is_superuser %}
+        <div class="col-12 mb-5">
+            <small class="font-weight-bold">
+                <a href="{% url 'edit_event' event.id %}">Edit</a> |
+                <a class="text-danger" href="{% url 'delete_event' event.id %}">Delete</a>
+            </small>
+        </div>
+        {% endif %}
         {% endif %}
         {% endfor %}
     </div>
