--- a/events/templates/events/edit_event.html
+++ b/events/templates/events/edit_event.html
@@ -9,7 +9,7 @@
 <div class="overlay"></div>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-lg-6">
             <hr>
             <h2 class="logo-font mb-4">Event Management</h2>
             <h5 class="text-muted">Edit an Event</h5>
@@ -18,7 +18,7 @@
     </div>
 
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-lg-6">
             <form method="POST" action="{% url 'edit_event' event.id %}" class="form mb-2">
                 {% csrf_token %}
                 {{ form | crispy }}
