--- a/album/templates/album/album.html
+++ b/album/templates/album/album.html
@@ -5,11 +5,7 @@
 
 {% endblock postcss %}
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<div class="container header-container"></div>
 {% endblock page_header %}
 
 {% block content %}
@@ -35,17 +31,41 @@
         <div class="grid-col grid-col--1"></div>
         <div class="grid-col grid-col--2"></div>
         <div class="grid-col grid-col--3"></div>
-        {% for photo in album %}
+        {% for media in album %}
         <div class="grid-item">
-            <a href="{{ photo.image.url }}" data-lightbox="album" data-title="{{ photo.caption }}">
-                <img src="{{ photo.image.url }}" alt="{{ photo.image.name }}">
+            <a href="{{ media.image.url }}" data-lightbox="album" data-title="{{ media.caption }}">
+                <img src="{{ media.image.url }}" alt="{{ media.image.name }}">
             </a>
         </div>
         {% endfor %}
     </div>
+    {% if request.user.is_superuser %}
+    <div class="row my-5">
+        <div class="col">
+            <hr>
+            <h5>For Administrators</h5>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            {% for media in album %}
+            <div class="col-2"><img src="{{ media.image.url }}" width="50" height="50"></div>
+            <div class="col-5 text-left">{{ media.name }}</div>
+            <div class="col-5 text-right">
+                <small class="font-weight-bold">
+                    <a href="{% url 'edit_media' media.id %}">Edit</a> |
+                    <a class="text-danger" href="{% url 'delete_media' media.id %}">Delete</a>
+                </small>
+            </div>
+            <div class="col-12">
+            <hr>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+    <a class="btn btn-outline-black rounded-0" href="{% url 'add_media' %}">Add Media</a>
+    {% endif %}
 </div>
-
-
 
 {% endblock content %}
 
