--- a/events/templates/includes/event_grid_lg.html
+++ b/events/templates/includes/event_grid_lg.html
@@ -3,8 +3,7 @@
         <div class="col-12 py-3"><strong>Past Events</strong></div>
         <div class="col-2 border bg-secondary text-light text-left py-3">Date</div>
         <div class="col-7 border bg-secondary text-light text-left py-3">Programme</div>
-        <div class="col-2 border bg-secondary text-light text-left py-3">Venue</div>
-        <div class="col-1 border bg-secondary text-light text-left py-3">Link</div>
+        <div class="col-3 border bg-secondary text-light text-left py-3">Venue</div>
         {% for event in calendar %}
         {% if event.is_due %}
         <div class="col-2 border bg-white text-left py-1"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
@@ -16,8 +15,7 @@
             {% endif %}
         </div>
         <div class="col-7 border bg-white text-left py-1">{{ event.programme }}</div>
-        <div class="col-2 border bg-white text-left py-1">{{ event.venue }}</div>
-        <div class="col-1 border bg-white text-left py-1">{% if event.event_url %}<a href="{{ event.event_url }}">Link</a>{% else %}<small>None</small>{% endif %}</div>
+        <div class="col-3 border bg-white text-left py-1">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
         {% endif %}
         {% endfor %}
     </div>
@@ -26,8 +24,7 @@
         <div class="col-12 py-3"><strong>Upcoming Events</strong></div>
         <div class="col-2 border bg-info text-light text-left py-3">Date</div>
         <div class="col-7 border bg-info text-light text-left py-3">Programme</div>
-        <div class="col-2 border bg-info text-light text-left py-3">Venue</div>
-        <div class="col-1 border bg-info text-light text-left py-3">Link</div>
+        <div class="col-3 border bg-info text-light text-left py-3">Venue</div>
         {% for event in calendar %}
         {% if event.is_future %}
         <div class="col-2 border bg-white text-left py-1"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small>
@@ -39,8 +36,8 @@
             {% endif %}
         </div>
         <div class="col-7 border bg-white text-left py-1">{{ event.programme }}</div>
-        <div class="col-2 border bg-white text-left py-1">{{ event.venue }}</div>
-        <div class="col-1 border bg-white text-left py-1">{% if event.event_url %}<a href="{{ event.event_url }}">Link</a>{% else %}<small>None</small>{% endif %}</div>
+        <div class="col-3 border bg-white text-left py-1">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
+
         {% endif %}
         {% endfor %}
     </div>
