--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="wrapper-musician-text col-6">
                     <p>
-                    Lorem ipsum
+                        Lorem ipsum
                     </p>
                 </div>
             </div>
@@ -46,7 +46,9 @@
         </div>
     </div>
 </div>
-{% endblock content %} {% block postjs %} {{ block.super }}
+{% endblock content %}
+{% block postjs %}
+{{ block.super }}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js" integrity="sha256-XDWrid8aGX+NZwSY7JzTu6oWArI71Sw+aUZ9Hd0P5mo=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js" integrity="sha256-2p2tRZlPowp3P/04Pw2rqVCSbhyV/IB7ZEVUglrDS/c=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js" integrity="sha256-peenofh8a9TIqKdPKIeQE7mJvuwh+J0To7nslvpj1jI=" crossorigin="anonymous"></script>
