Removed hr tags

--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -26,9 +26,5 @@
 {% endblock content %}
 
 {% block page_footer %}
-<div class="container footer-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<div class="container footer-container"></div>
 {% endblock page_footer %}
