--- a/album/templates/album/add_media.html
+++ b/album/templates/album/add_media.html
@@ -8,12 +8,10 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center my-5">
         <div class="col-12 col-md-6">
-            <hr>
             <h2 class="logo-font mb-4">Media Management</h2>
             <h5 class="text-muted">Add a Photo or a link to a Video</h5>
-            <hr>
         </div>
     </div>
 
