--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -13,11 +13,9 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container mb-2">
-    <div class="row">
+    <div class="row my-5">
         <div class="col">
-            <hr>
             <h2 class="mb-4">Your Shopping Bag</h2>
-            <hr>
         </div>
     </div>
 
@@ -25,7 +23,6 @@
         <div class="col">
             {% if bag_items %}
             <div class="table-responsive rounded">
-
                 <table class="table table-sm table-borderless">
                     <thead class="text-black">
                         <tr>
@@ -116,7 +113,7 @@
             </div>
             {% else %}
             <p class="lead mb-5">Your bag is empty.</p>
-            <a href="{% url 'shop' %}" class="btn btn-outline-dark rounded-0 btn-lg">
+            <a href="{% url 'shop' %}" class="btn btn-outline-dark rounded-0 btn-lg mb-5">
                 <span class="icon">
                     <i class="fas fa-chevron-left"></i>
                 </span>
