--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -2,25 +2,16 @@
 {% load static %}
 {% load bag_tools %}
 
-{% block extra_css %}
-{% endblock extra_css %}
-
 {% block page_header %}
-<div class="container header-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<div class="container header-container"></div>
 {% endblock page_header %}
 
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-    <div class="row">
+    <div class="row my-5">
         <div class="col">
-            <hr>
             <h2 class="logo-font mb-4">Checkout</h2>
-            <hr>
         </div>
     </div>
 
