--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,12 +1,7 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 
-<!-- <section class="home row">
-    <div class="col-12">
-        <img src="{% static 'icons/alarm.svg' %}" alt="" height="72" width="72" class="mb-4" />
-        <h1 class="h3 mb-3 font-weight-normal">Guillermo Brachetta</h1>
-    </div>
-</section>
--->
 <div id="main" class="main-container">
     <div id="intro" class="intro">
         <div class="background-container">
