--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -12,14 +12,12 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-    <div class="row">
+    <div class="row my-5">
         <div class="col">
-            <hr>
             <h2 class="logo-font mb-4">My Profile</h2>
-            <hr>
         </div>
     </div>
-    <div class="row">
+    <div class="row mb-5">
         <div class="col-12 col-lg-5">
             <p class="text-muted">Default Delivery Information</p>
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
