--- a/shop/templates/shop/add_cd.html
+++ b/shop/templates/shop/add_cd.html
@@ -12,15 +12,12 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mt-5">
         <div class="col-12 col-md-6">
-            <hr>
             <h2 class="logo-font mb-4">CD Management</h2>
             <h5 class="text-muted">Add a CD</h5>
-            <hr>
         </div>
     </div>
-
     <div class="row justify-content-center">
         <div class="col-12 col-md-6">
             <form method="POST" action="{% url 'add_cd' %}" class="form mb-2" enctype="multipart/form-data">
