--- a/shop/templates/shop/edit_cd.html
+++ b/shop/templates/shop/edit_cd.html
@@ -12,12 +12,10 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mt-5">
         <div class="col-12 col-md-6">
-            <hr>
             <h2 class="logo-font mb-4">CD Management</h2>
             <h5 class="text-muted">Edit a CD</h5>
-            <hr>
         </div>
     </div>
 
