--- a/album/templates/album/album.html
+++ b/album/templates/album/album.html
@@ -10,7 +10,6 @@
 
 {% block content %}
 <div class="overlay"></div>
-
 <div class="container mt-3 mt-md-5">
     <div class="grid">
         <div class="grid-col grid-col--1"></div>
@@ -31,34 +30,7 @@
         {% endfor %}
     </div>
     {% if request.user.is_superuser %}
-    <div class="row my-5">
-        <div class="col">
-            <hr>
-            <h5>For Administrators</h5>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            {% for media in album %}
-            {% if media.image %}
-            <div class="col-2"><img src="{{ media.image.url }}" width="50" height="50"></div>
-            {% else %}
-            <div class="col-2"><img src="{{ MEDIA_URL }}noimage.png" width="50" height="50"></div>
-            {% endif %}
-            <div class="col-5 text-left"><small>{{ media.name }}</small></div>
-            <div class="col-5 text-right">
-                <small class="font-weight-bold">
-                    <a href="{% url 'edit_media' media.id %}">Edit</a> |
-                    <a class="text-danger" href="{% url 'delete_media' media.id %}">Delete</a>
-                </small>
-            </div>
-            <div class="col-12">
-                <hr>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-    <a class="btn btn-outline-black rounded-0" href="{% url 'add_media' %}">Add Media</a>
+    {% include 'includes/album_admin.html' %}
     {% endif %}
 </div>
 
@@ -74,14 +46,7 @@
 
 {% block postjs %}
 {{ block.super }}
-<!--
-<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
-<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.js"></script>
--->
 <script src="https://unpkg.com/colcade@0/colcade.js"></script>
-
-
-
 <script src="{% static 'album/js/lightbox.js' %}"></script>
 <script src="{% static 'album/js/album.js' %}"></script>
 {% endblock %}
