--- a/album/templates/includes/album_admin.html
+++ b/album/templates/includes/album_admin.html
@@ -10,10 +10,11 @@
         {% if media.image %}
         <div class="col-2"><img src="{{ media.image.url }}" width="50" height="50"></div>
         {% else %}
-        <div class="col-2"><img src="{{ MEDIA_URL }}noimage.png" width="50" height="50"></div>
+        <div class="col-2"><img src="{{ MEDIA_URL }}video.png" width="50" height="50"></div>
         {% endif %}
-        <div class="col-5 text-left"><small>{{ media.name }}</small></div>
-        <div class="col-5 text-right">
+        <div class="col-3 text-left"><small>{{ media.name }}</small></div>
+        <div class="col-5 text-left"><small>{{ media.caption }}</small></div>
+        <div class="col-2 text-right">
             <small class="font-weight-bold">
                 <a href="{% url 'edit_media' media.id %}">Edit</a> |
                 <a class="text-danger" href="{% url 'delete_media' media.id %}">Delete</a>
