--- a/album/templates/album/album.html
+++ b/album/templates/album/album.html
@@ -8,33 +8,36 @@
 {% endblock page_header %}
 
 {% block content %}
+<div class="container mt-5">
+    <h1>Photo and Video</h1>
+</div>
 <div class="container mt-3 mt-md-5">
     <div class="row">
         <div class="col">
             <div id="nanogallery2" data-nanogallery2='{
-        "thumbnailHeight": "auto",
-        "thumbnailWidth": 400,
-        "thumbnailBaseGridHeight" : 100,
-        "thumbnailGutterWidth" : 10,
-        "thumbnailGutterHeight" : 10,
-        "thumbnailBorderHorizontal" : 0,
-        "thumbnailBorderVertical" : 0,
-        "gallerySorting": "random",
-        "galleryDisplayTransition": "slideUp",
-        "galleryResizeAnimation": true,
-        "galleryDisplayTransitionDuration": 1000,
-        "thumbnailDisplayOrder": "random",
-        "thumbnailDisplayTransition": "scaleUp",
-        "thumbnailHoverEffect2": "imageSepiaOff",
-        "viewerToolbar": {
-        "display": true,
-        "standard": "minimizeButton, shareButton, fullscreenButton",
-        "minimized": "minimizeButton, fullscreenButton, downloadButton, infoButton" },
-        "viewerTools": {
-        "topLeft": "label",
-        "topRight": "playPauseButton, zoomButton, fullscreenButton, closeButton" },
-        "thumbnailLabel": { "display": false, "valign": "bottom", "position": "overImage", "hideIcons": false, "displayDescription": true }
-        }'>
+                    "thumbnailHeight": "auto",
+                    "thumbnailWidth": 400,
+                    "thumbnailBaseGridHeight" : 100,
+                    "thumbnailGutterWidth" : 2,
+                    "thumbnailGutterHeight" : 2,
+                    "thumbnailBorderHorizontal" : 0,
+                    "thumbnailBorderVertical" : 0,
+                    "gallerySorting": "random",
+                    "galleryDisplayTransition": "slideUp",
+                    "galleryResizeAnimation": true,
+                    "galleryDisplayTransitionDuration": 1000,
+                    "thumbnailDisplayOrder": "random",
+                    "thumbnailDisplayTransition": "scaleUp",
+                    "thumbnailHoverEffect2": "imageSepiaOff",
+                    "viewerToolbar": {
+                    "display": true,
+                    "standard": "minimizeButton, shareButton, fullscreenButton",
+                    "minimized": "minimizeButton, fullscreenButton, downloadButton, infoButton" },
+                    "viewerTools": {
+                    "topLeft": "label",
+                    "topRight": "playPauseButton, zoomButton, fullscreenButton, closeButton" },
+                    "thumbnailLabel": { "display": false, "valign": "bottom", "position": "overImage", "hideIcons": false, "displayDescription": true }
+                    }'>
                 {% for media in album %}
                 {% if media.image %}
                 <a href="{{ media.image.url }}" data-ngthumb="{{ media.image.url }}" data-ngdesc="{{ media.caption }}" alt="{{ media.name }}"></a>
@@ -52,11 +55,7 @@
 {% endblock content %}
 
 {% block page_footer %}
-<div class="container footer-container">
-    <div class="row">
-        <div class="col"></div>
-    </div>
-</div>
+<div class="container footer-container"></div>
 {% endblock page_footer %}
 
 {% block postjs %}
