--- a/album/templates/includes/album_admin.html
+++ b/album/templates/includes/album_admin.html
@@ -6,6 +6,9 @@
 </div>
 <div class="container">
     <div class="row">
+        <div class="col-12 mb-5">
+            <a class="btn btn-outline-black rounded-0" href="{% url 'add_media' %}">Add Media</a>
+        </div>
         {% for media in album %}
         {% if media.image %}
         <div class="col-2"><img src="{{ media.image.url }}" width="50" height="50"></div>
@@ -26,4 +29,3 @@
         {% endfor %}
     </div>
 </div>
-<a class="btn btn-outline-black rounded-0" href="{% url 'add_media' %}">Add Media</a>
