--- a/events/templates/includes/event_grid_sm.html
+++ b/events/templates/includes/event_grid_sm.html
@@ -4,13 +4,13 @@
         {% for event in calendar %}
         {% if event.is_due %}
         <div class="col-3 border bg-secondary text-light text-left pl-1"><small>Date</small></div>
-        <div class="col-9 border text-left"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small></div>
-        <div class="col-3 border bg-secondary text-light text-left pl-1"><small>Programme</small></div>
-        <div class="col-9 border text-left">{{ event.programme }}</div>
+        <div class="col-9 text-left"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small></div>
         <div class="col-3 border bg-secondary text-light text-left pl-1"><small>Venue</small></div>
-        <div class="col-9 border text-left">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
+        <div class="col-9 text-left">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
+        <div class="col-3 border bg-secondary text-light text-left pl-1"><small>Programme</small></div>
+        <div class="col-9 text-left">{{ event.programme }}</div>
         {% if request.user.is_superuser %}
-        <div class="col-12 mb-5">
+        <div class="col-12 mb-5 text-left pl-0">
             <small class="font-weight-bold">
                 <a href="{% url 'edit_event' event.id %}">Edit</a> |
                 <a class="text-danger" href="{% url 'delete_event' event.id %}">Delete</a>
@@ -26,13 +26,13 @@
         {% for event in calendar %}
         {% if event.is_future %}
         <div class="col-3 border bg-info text-light text-left pl-1"><small>Date</small></div>
-        <div class="col-9 border text-left"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small></div>
-        <div class="col-3 border bg-info text-light text-left pl-1"><small>Programme</small></div>
-        <div class="col-9 border text-left">{{ event.programme }}</div>
+        <div class="col-9 text-left"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small></div>
         <div class="col-3 border bg-info text-light text-left pl-1"><small>Venue</small></div>
-        <div class="col-9 border text-left">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
+        <div class="col-9 text-left">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
+        <div class="col-3 border bg-info text-light text-left pl-1"><small>Programme</small></div>
+        <div class="col-9 text-left">{{ event.programme }}</div>
         {% if request.user.is_superuser %}
-        <div class="col-12 mb-5">
+        <div class="col-12 mb-5 text-left pl-0">
             <small class="font-weight-bold">
                 <a href="{% url 'edit_event' event.id %}">Edit</a> |
                 <a class="text-danger" href="{% url 'delete_event' event.id %}">Delete</a>
