--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -1,64 +1,70 @@
 {% load static %}
-<nav class="navbar fixed-top navbar-expand-lg bg-dark">
-    <a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="{% static 'icons/logo.svg' %}" height="72" width="72" alt="Logo" /></a>
+<nav class="navbar fixed-top navbar-icon-top navbar-expand-lg navbar-expand-xl navbar-dark bg-dark">
+    <a class="navbar-brand pl-3" href="{% url 'home' %}"><img class="logo" src="{% static 'icons/logo.svg' %}" height="72" width="72" alt="Logo" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item {{ home }}">
-                <a class="nav-link navbar-items" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item {{ home }} px-2">
+                <a class="nav-link navbar-items " href="{% url 'home' %}">
+                    <i class="fa fa-home"></i>
+                    Home
+                    <span class="sr-only">(current)</span>
+                </a>
             </li>
-            <li class="nav-item {{ media }}">
-                <a class="nav-link navbar-items" href="{% url 'album' %}">Media</a>
+            <li class="nav-item {{ media }} px-2">
+                <a class="nav-link navbar-items " href="{% url 'album' %}">
+                    <i class="fa fa-photo-video"></i>
+                    Gallery
+                </a>
             </li>
-            <li class="nav-item {{ events }}">
-                <a class="nav-link navbar-items" href="{% url 'events' %}">Events</a>
+            <li class="nav-item {{ events }} px-2">
+                <a class="nav-link navbar-items " href="{% url 'events' %}">
+                    <i class="fa fa-calendar-alt"></i>
+                    Events
+                </a>
             </li>
-            <li class="nav-item {{ shop }}">
-                <a class="nav-link navbar-items" href="{% url 'shop' %}">Shop</a>
+            <li class="nav-item {{ shop }} px-2">
+                <a class="nav-link navbar-items " href="{% url 'shop' %}">
+                    <i class="fa fa-store"></i>
+                    Shop
+                </a>
             </li>
         </ul>
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                <li class="list-inline-item dropdown">
-                    <a class="text-nav nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <div class="text-center">
-                            <div><i class="fas fa-user fa-lg navbar-items"></i></div>
-                            <p class="my-0 navbar-items">My Account</p>
-                        </div>
-                    </a>
-                    <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                        {% if request.user.is_authenticated %}
-                        {% if request.user.is_superuser %}
-                        <a href="{% url 'add_media' %}" class="dropdown-item">Media Management</a>
-                        <a href="{% url 'add_event' %}" class="dropdown-item">Events Management</a>
-                        <a href="{% url 'add_cd' %}" class="dropdown-item">Product Management</a>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown px-2">
+                <a class="nav-link navbar-items" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-user"></i>
+                    Profile
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    {% if request.user.is_authenticated %}
+                    {% if request.user.is_superuser %}
+                    <a class="dropdown-item" href="{% url 'add_media' %}">Media Management</a>
+                    <a class="dropdown-item" href="{% url 'add_event' %}">Event Management</a>
+                    <a class="dropdown-item" href="{% url 'add_cd' %}">CDs Management</a>
+                    {% endif %}
+                    <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+                    <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
+                    {% else %}
+                    <a class="dropdown-item" href="{% url 'account_signup' %}">Register</a>
+                    <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
+                    {% endif %}
+                </div>
+            </li>
+
+            <li class="nav-item pl-2 pr-4">
+                <a class="nav-link navbar-items " href="{% url 'view_bag' %}">
+                    <i class="fa fa-shopping-bag">
+                        {% if grand_total %}
+                        <span class="badge badge-pill badge-danger">€</span>
                         {% endif %}
-                        <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                        {% else %}
-                        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                        {% endif %}
-                    </div>
-                </li>
-                <li class="list-inline-item">
-                    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-nav{% endif %} nav-link" href="{% url 'view_bag' %}">
-                        <div class="text-center">
-                            <div><i class="fas fa-shopping-bag fa-lg navbar-items"></i></div>
-                            <p class="my-0 navbar-items">
-                                {% if grand_total %}
-                                €{{ grand_total|floatformat:2 }}
-                                {% else %}
-                                €0.00
-                                {% endif %}
-                            </p>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-        </div>
+                    </i>
+                    Bag
+                </a>
+            </li>
+        </ul>
     </div>
 </nav>
