--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -3,6 +3,11 @@
     <a class="navbar-brand pl-3" href="{% url 'home' %}"><img class="logo" src="{% static 'icons/logo.svg' %}" height="72" width="72" alt="Logo" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
+        <span class="md-none">
+            {% if grand_total %}
+            <span class="badge badge-pill badge-danger"><small>€</small></span>
+            {% endif %}
+        </span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
