Added SVG logo to navbar

--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -1,6 +1,33 @@
 {% load static %}
 <nav class="navbar fixed-top navbar-icon-top navbar-expand-lg navbar-expand-xl navbar-dark bg-dark">
-    <a class="navbar-brand pl-3" href="{% url 'home' %}"><img class="logo" src="{% static 'icons/logo.svg' %}" height="72" width="72" alt="Logo" /></a>
+
+    <a href="{% url 'home' %}">
+        <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 560.130321 506.623658" preserveAspectRatio="xMidYMid meet">
+            <g transform="translate(-4.869679,509.981954) scale(0.100000,-0.100000)" fill="#cc1414" stroke="none">
+                <path d="M5395 5072 c-225 -124 -706 -549 -1180 -1043 -640 -666 -957 -917
+            -1480 -1176 -265 -131 -364 -171 -376 -152 -26 39 31 179 182 454 276 501 335
+            609 427 792 53 105 93 195 90 199 -4 4 -47 -2 -95 -12 -63 -13 -131 -38 -241
+            -91 -149 -71 -155 -73 -230 -73 l-77 0 -83 77 -84 76 -100 -16 c-241 -40 -559
+            -184 -963 -435 -521 -324 -787 -563 -829 -743 l-6 -26 132 -12 c166 -15 340
+            -50 527 -106 245 -73 615 -218 608 -239 -6 -19 -240 -220 -553 -476 -681 -557
+            -826 -699 -934 -915 -76 -150 -98 -322 -69 -532 30 -219 117 -427 217 -514 79
+            -70 212 -97 275 -56 44 29 152 181 395 559 290 450 475 724 674 998 294 405
+            328 436 653 595 127 62 349 166 494 230 235 104 284 122 440 161 96 24 176 42
+            177 41 1 -1 -4 -27 -12 -57 -32 -124 -10 -243 59 -314 60 -62 135 -88 257 -88
+            168 -1 308 43 726 228 165 73 334 144 375 158 95 32 237 46 358 36 l94 -8 96
+            41 c164 70 265 138 297 198 7 15 14 50 14 77 0 106 -69 113 -315 33 -88 -29
+            -185 -55 -215 -58 -49 -4 -60 -1 -102 26 -70 45 -72 57 -73 451 0 184 4 348 8
+            364 l8 29 -63 -7 c-90 -9 -178 -53 -248 -125 -61 -63 -77 -92 -299 -553 -101
+            -211 -142 -263 -256 -319 -61 -30 -164 -53 -177 -40 -12 11 10 173 37 265 31
+            107 69 191 136 304 66 109 203 251 579 600 555 515 647 626 739 886 50 141 78
+            336 49 336 -7 0 -35 -13 -63 -28z m-3365 -1537 c0 -3 -14 -41 -30 -84 -111
+            -288 -310 -393 -637 -334 -75 13 -91 19 -82 30 16 19 270 187 449 297 l155 95
+            73 0 c39 1 72 -1 72 -4z m-1273 -2411 l-154 -379 -121 -3 -122 -3 0 39 c0 99
+            68 263 156 379 31 40 93 108 139 151 83 79 244 206 251 199 2 -2 -65 -174
+            -149 -383z" />
+            </g>
+        </svg>
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         <span class="md-none">
